--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <div class="col-sm-12">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <strong><h1>Voctor.</h1><strong>
-                            <p>Some kid that picked up some pretty cool skills.</p>
+                            <strong><h1>????</h1><strong>
+                            <p>visible confusion</p>
                         </div>
                     </div>
                 </div>
