--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <footer>
         <div class="container">
           <ul class="list-inline">
-          <p>Made with <i class="fa fa-heart"></i> by Voctor.</p>
+          <p>get outta here</p>
         </div>
     </footer>
 
